Scrollbar fix

--- a/style.css
+++ b/style.css
@@ -135,18 +135,7 @@ section img {
     border-radius: 20%;
 }
 
-::-webkit-scrollbar{
-    width: 2%;
-}
-
-::-webkit-scrollbar-track {
-    background: #650d0d;
-}
-
-::-webkit-scrollbar-thumb {
-    background: lightgrey;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: grey;
+.scroller {
+    scrollbar-width: thin;
+    scrollbar-color: darkred lightgray;
 }
